--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -160,6 +160,17 @@ jobs:
         run: |
           mkdir -p ~/.ssh
           ssh-keyscan -H ${{ env.BASTION_IP }} >> ~/.ssh/known_hosts
+
+          for i in {1..10}; do
+            echo "Checking Bastion SSH ($i/10)..."
+            if ssh -o StrictHostKeyChecking=no \
+                -i ~/.ssh/private_key.pem \
+                ${{ secrets.BASTION_USER }}@${{ env.BASTION_IP }} "echo ok"; then
+              echo "Bastion is up!"
+              break
+            fi
+            sleep 5
+          done
           ssh -o StrictHostKeyChecking=no \
             -i ~/.ssh/private_key.pem \
             ${{ secrets.BASTION_USER }}@${{ env.BASTION_IP }} \
